# rustic

./: .gitignore  Cargo.toml  LICENSE.txt  README.MD
examples/basic-auth/: Cargo.toml
examples/basic-auth/src/: main.rs
examples/bearer-auth/: Cargo.toml
examples/bearer-auth/src/: main.rs
examples/cookies/: Cargo.toml
examples/cookies/src/: main.rs
examples/cors/: Cargo.toml
examples/cors/src/: main.rs
examples/custom-middleware/: Cargo.toml
examples/custom-middleware/src/: main.rs
examples/fs/: Cargo.toml
examples/fs/src/: index.html  main.rs
examples/fs/src/static/: main.js
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/proxy/: Cargo.toml
examples/proxy/src/: main.rs
examples/swagger/: Cargo.toml
examples/swagger/migrations/: 0001_todos_table.sql  0002_seed_todos.sql
examples/swagger/src/: main.rs
rustic/: Cargo.toml
rustic-proxy/: Cargo.toml
rustic-proxy/src/: lib.rs  shared_data.rs
rustic-sqlx/: Cargo.toml
rustic-sqlx/src/: lib.rs
rustic-sqlx/src/middlewares/: mod.rs  sqlx_middleware.rs
rustic-swagger/: Cargo.toml
rustic-swagger/src/: lib.rs
rustic-swagger/src/middlewares/: mod.rs  swagger_middleware.rs
rustic/src/: endpoint.rs  lib.rs  middleware.rs  redirect.rs  request.rs  response.rs  route.rs  router.rs  server.rs
rustic/src/fs/: mod.rs  serve_dir.rs  serve_file.rs
rustic/src/listeners/: mod.rs  parsed_listener.rs  tcp_listener.rs  to_listener.rs
rustic/src/middlewares/: auth_middleware.rs  cookie_middleware.rs  cors_middleware.rs  log_middleware.rs  mod.rs
