[package]
name = "rustic-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustic = { path = "../rustic" }
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.41"
async-h1 = "2.3.3"