[package]
name = "rustic-swagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustic = { path = "../rustic" }
serde = "1.0.117"
serde_json = "1.0.95"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.41"
utoipa = "3.2.1"
utoipa-swagger-ui = "3.1.3"
http-types = "2.12.0"