[package]
name = "rustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-h1 = "2.3.3"
http-types = "2.12.0"
futures-core = "0.3.8"
async-trait = "0.1.41"
kv-log-macro = "1.0.7"
log = { version = "0.4.13", features = ["kv_unstable_std"] }