[package]
name = "rustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-h1 = "2.3.3"
http-types = "2.12.0"
futures-core = "0.3.8"
async-trait = "0.1.41"
kv-log-macro = "1.0.7"
log = { version = "0.4.13", features = ["kv_unstable_std"] }
routefinder = "0.5.0"
serde = "1.0.117"
serde_json = "1.0.59"
base64 = "0.13.0"
femme = "2.1.1"
regex = "1.5.5"
libc = "0.2.141"