[package]
name = "custom-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustic = { path = "../../rustic" }
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.41"
femme = "2.1.1"